project/frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todos-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-frontend
  template:
    metadata:
      labels:
        app: todos-frontend
    spec:
      containers:
        - name: todos-frontend
          image: PROJECT/IMAGE
