project/frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todos-frontend
spec:
  type: NodePort
  selector:
    app: todos-frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
