project/frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: app
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todos-frontend
            port:
              number: 80
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: todos-backend
            port:
              number: 80
